# SRDN

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: equalize_ffn.py  param_equalization.json  run_enwik8_d128.sh  run_frjt_eq.sh  run_rwkv7_faithful.sh  run_rwkv7_scaling.sh  run_srdn.sh  run_transformer.sh
baselines/: __init__.py  common.py  gdn2.py  m2rnn_canon.py  mamba3.py  transformer.py
experiments/: frjt_compare.py  train_graph_rl.py  train_lm.py
ops/: __init__.py  attention.py  gdn2.py  m2rnn.py  mamba3.py  srdn.py
results/enwik8/: gdn2_s0.json  gdn2_s1.json  gdn2_s2.json  m2rnn_s0.json  m2rnn_s1.json  m2rnn_s2.json  mamba3_s0.json  mamba3_s1.json  mamba3_s2.json  srdn_s0.json  srdn_s1.json  srdn_s2.json  transformer_s0.json  transformer_s1.json  transformer_s2.json
results/enwik8_eq/: gdn1_s0.json  gdn1_s1.json  gdn1_s2.json  gdn2_s0.json  gdn2_s1.json  gdn2_s2.json  m2rnn_s0.json  m2rnn_s1.json  m2rnn_s2.json  mamba2_s0.json  mamba2_s1.json  mamba2_s2.json  mamba3_s0.json  mamba3_s1.json  mamba3_s2.json  perproj_lite_s0.json  perproj_lite_s1.json  perproj_lite_s2.json  perproj_s0.json  perproj_s1.json  perproj_s2.json  rwkv7faithful_eq_s0.json  rwkv7faithful_eq_s1.json  rwkv7faithful_eq_s2.json  split_eq_s0.json  split_eq_s1.json  split_eq_s2.json  transformer_s0.json  transformer_s1.json  transformer_s2.json
results/enwik8_scaling/: rwkv7_d128_s0.json  rwkv7_d128_s1.json  rwkv7_d128_s2.json  rwkv7_d192_s0.json  rwkv7_d192_s1.json  rwkv7_d192_s2.json  rwkv7_d256_s0.json  rwkv7_d256_s1.json  rwkv7_d256_s2.json  rwkv7_d64_s0.json  rwkv7_d64_s1.json  rwkv7_d64_s2.json  rwkv7_d96_s0.json  rwkv7_d96_s1.json  rwkv7_d96_s2.json  srdn_d128_s0.json  srdn_d128_s1.json  srdn_d128_s2.json  srdn_d192_s0.json  srdn_d192_s1.json  srdn_d192_s2.json  srdn_d256_s0.json  srdn_d256_s1.json  srdn_d256_s2.json  srdn_d64_s0.json  srdn_d64_s1.json  srdn_d64_s2.json  srdn_d96_s0.json  srdn_d96_s1.json  srdn_d96_s2.json
results/frjt/: frjt.json
results/frjt_eq/: frjt_gdn1.json  frjt_gdn2.json  frjt_m2rnn.json  frjt_mamba2.json  frjt_mamba3.json  frjt_perproj.json  frjt_perproj_lite.json  frjt_rwkv7faithful_eq.json  frjt_split_eq.json  frjt_transformer.json
srdn/: __init__.py  builders.py  channel.py  core.py  model.py  moe.py  norm.py
srdn/ops/: __init__.py  attention.py  conv.py  gdn1.py  gdn2.py  m2rnn.py  mamba2.py  mamba3.py  rwkv7.py  srdn.py
tasks/: __init__.py  enwik8.py  frjt.py  graph_rl.py  seeding.py
tasks/enwik8/: __init__.py  data.py  train.py
tasks/frjt/: __init__.py  compare.py  task.py
tasks/graph_traversal/: __init__.py  graph_rl.py  train.py  traversal.py
tests/: test_chunk_equivalence.py  test_parity.py  test_srdn_equiv.py  test_step_parallel.py
